--- a/test/fixtures/transactions.yml
+++ b/test/fixtures/transactions.yml
@@ -3,11 +3,13 @@
 one:
   amount: 9.99
   description: MyText
-  transaction_date: 2024-01-02 23:46:26
+  transaction_date: 2024-01-03 20:23:26
   user: one
+  after_balance: 9.99
 
 two:
   amount: 9.99
   description: MyText
-  transaction_date: 2024-01-02 23:46:26
+  transaction_date: 2024-01-03 20:23:26
   user: two
+  after_balance: 9.99
